tests/errors/type_mismatch2.f90
program type_mismatch2
implicit none
integer :: x
x = 5 + "x"
end program
